edition = "2023";  // successor to proto2 and proto3

package v2;
import "google/protobuf/go_features.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";
option features.(pb.go).api_level = API_HYBRID;

// VulnerabilityState are the possible applicable to CVE. By default all vulnerabilities are in observed state.
enum VulnerabilityState {
  // This is the default state and indicates that the CVE is not excluded from policy evaluation and risk evaluation.
  OBSERVED = 0; // [Default state]
  // Indicates that the vulnerability is deferred. A deferred CVE is excluded from policy evaluation and risk evaluation.
  DEFERRED = 1;
  // Indicates that the vulnerability is a false-positive. A false-positive CVE is excluded from policy evaluation and risk evaluation.
  FALSE_POSITIVE = 2;
}
